# backend_rust

./: .env  .gitignore  AGENTS.md  Cargo.toml  DATABASE_SETUP.md  retiros.db  tauri.conf.json
context/: project.md
migrations/: 20251016075318_create_categorias_table.sql  20251016075332_create_retiros_table.sql  20251016075336_create_transacciones_table.sql  20251112074947_remove_fecha_from_transacciones.sql
src/: errors.rs  lib.rs  main.rs
src/cli/: categoria_commands.rs  commands.rs  mod.rs  retiro_commands.rs  transaccion_commands.rs
src/database/: connection.rs  mod.rs
src/desktop/: commands.rs  mod.rs
src/models/: categoria.rs  mod.rs  retiro.rs  transaccion.rs
src/repositories/: categoria_repository.rs  mod.rs  retiro_repository.rs  transaccion_repository.rs
