[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
desktop = ["tauri"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
dotenvy = "0.15"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Desktop App (Tauri)
tauri = { version = "1.0", features = ["shell-open"], optional = true }

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

